Fix wrapping long lines without spaces, fixing IE as well.

--- a/src/stylesheets/comments.scss
+++ b/src/stylesheets/comments.scss
@@ -129,7 +129,7 @@
 	font-size: 13px;
 
 	p {
-		display: inline;
+		display: inline-block;
 		word-break: break-all;
 	}
 
